# alixp-agents

./: .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml
.claude/plans/: session-implement.md
evals/: README.md
learning/: claude-sdk-learnings.md  python-learnings.md
process_agent/: __init__.py  agent.py  config.py  query.py
process_agent/working-dir/.claude/skills/trash-talk/: SKILL.md
reference/: agent-sdk.md
